fix overflow

--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -15,6 +15,7 @@ body {
   height: 100%;
   font-family: $font-default;
   font-size: sizing(2.5);
+  overflow: hidden;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
